[gd_scene load_steps=12 format=3 uid="uid://b8owwl6jgu4ka"]

[ext_resource type="Script" path="res://scene/Script/Options.gd" id="1_uiw14"]
[ext_resource type="Texture2D" uid="uid://btrymqcr2aiak" path="res://assets/Butt_assets/Fullscreen.png" id="2_sykf3"]
[ext_resource type="Texture2D" uid="uid://cqwg7mnfebown" path="res://assets/Butt_assets/Fullscreen_mouseover.png" id="3_sxkl6"]
[ext_resource type="Texture2D" uid="uid://d3ryj4hgvdea5" path="res://assets/Butt_assets/Audio.png" id="4_cr3xn"]
[ext_resource type="Texture2D" uid="uid://b4yqn03fy6oma" path="res://assets/Butt_assets/Back.png" id="4_wtr0r"]
[ext_resource type="Texture2D" uid="uid://c8pabbwt2ph18" path="res://assets/Butt_assets/Audio_mouseover.png" id="5_sss41"]
[ext_resource type="Texture2D" uid="uid://d1r6v3pywmpwf" path="res://assets/Butt_assets/Back_mouseover.png" id="5_v5lm4"]
[ext_resource type="Texture2D" uid="uid://dtn66geou32wu" path="res://assets/Butt_assets/Play.png" id="6_4i2mm"]
[ext_resource type="Texture2D" uid="uid://dne880y117t00" path="res://assets/Butt_assets/Play_mouseover.png" id="7_kfwqh"]
[ext_resource type="PackedScene" uid="uid://dsv7v7osvhtbb" path="res://scene/menu_background.tscn" id="8_xb80b"]
[ext_resource type="AudioStream" uid="uid://c7otjkvkgdhdt" path="res://Global/third_lv/button_sound.mp3" id="11_4pboe"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_uiw14")

[node name="Full_screen" type="TextureButton" parent="."]
offset_left = 384.0
offset_top = 128.0
offset_right = 803.0
offset_bottom = 295.0
scale = Vector2(0.608543, 0.608543)
texture_normal = ExtResource("2_sykf3")
texture_hover = ExtResource("3_sxkl6")

[node name="Back" type="TextureButton" parent="."]
offset_left = 64.0
offset_top = 448.0
offset_right = 483.0
offset_bottom = 615.0
scale = Vector2(0.763313, 0.763313)
texture_normal = ExtResource("4_wtr0r")
texture_hover = ExtResource("5_v5lm4")

[node name="Play" type="TextureButton" parent="."]
offset_left = 896.0
offset_top = 448.0
offset_right = 1315.0
offset_bottom = 615.0
scale = Vector2(0.774225, 0.764517)
texture_normal = ExtResource("6_4i2mm")
texture_hover = ExtResource("7_kfwqh")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 384.0
offset_top = 280.0
offset_right = 803.0
offset_bottom = 447.0
scale = Vector2(0.608225, 0.608225)
texture_normal = ExtResource("4_cr3xn")
texture_hover = ExtResource("5_sss41")

[node name="ParallaxBackground" parent="." instance=ExtResource("8_xb80b")]

[node name="button" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_4pboe")

[connection signal="pressed" from="Full_screen" to="." method="_on_full_screen_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
